# Occ_Orin

./: .gitignore  README.md
orin_occ/: README.md  pyproject.toml  requirements.txt
orin_occ/configs/: baseline_orin_camera_lidar.json  nuscenes_occ3d_public.json  occ3d_nuscenes_mini_public.json
orin_occ/examples/: vehicle_raw_manifest.example.jsonl
orin_occ/scripts/: build_occ3d_annotation_manifest.py  build_occ3d_nuscenes_manifest.py  build_vehicle_lidar_manifest.py  export_onnx.py  smoke_test.py  train.py
orin_occ/src/orin_occ/: config.py  export.py  train.py
orin_occ/src/orin_occ/models/: __init__.py  bev_encoder.py  blocks.py  camera_encoder.py  lidar_refine.py  network.py  occ_head.py  projector.py
orin_occ/src/orin_occ/preprocess/: __init__.py  lidar_bev.py
当前环境/: 大车.md
调研/: OCC数据采集方案.md  Orin部署OCC方案.md  occ的基本调研.md  当前传感器配置下的OCC方案判断.md
调研/专家路线/: 00-专家路线学习地图.md  01-感知任务边界与OCC的真正位置.md  02-多传感器几何、坐标系与标定.md  03-数据引擎：采集、同步、清洗、切分与回流.md  04-OCC标签、伪标签、损失与评估.md  05-OCC模型路线图：从表示到融合.md  06-Orin部署与工程化落地.md  07-结合你当前车辆的项目路线图.md
调研/实战教程/: 01-当前项目实战教程.md  02-当前项目检查清单.md
调研/零基础入门/: 00-学习地图.md  01-自动驾驶和OCC是什么.md  02-认识你车上的硬件.md  03-数据采集、清洗和标注.md  04-OCC标签、数据集和训练.md  05-你的项目应该怎么推进.md  06-术语表.md
